tests/errors/fun-arrow-body/main.pa
# Function literals use a brace body, not an arrow.
def f = fun x => x + 1
def main = print "x"
